# Cargo-Workspace-Manager

./: Cargo.toml  README.md
archieve/: dir.rs  echo.rs
sh/: test_fuctions.sh
src/: cli.rs  error.rs  errors.rs  fmt_logger.rs  lib.rs  main.rs  toml_struct.rs
src/structures/: command.rs  mod.rs  toml_struct.rs  traits.rs
